# tauri-app-v1

./: .gitignore  .stylelintignore  README.md  completions.zsh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.sh  tsconfig.json  vite.config.ts
docs/: code-excude.md  editor.md  git.md  icon.md  layout.md  question.md  sql.md  temp.md  test.md  tree.md
src-tauri/: Cargo.toml
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/src/: main.rs
src-tauri/app/src/core/: handle.rs  menu.rs  mod.rs
src-tauri/common/: Cargo.toml
src-tauri/plugins/cmd/: Cargo.toml
src-tauri/plugins/cmd/src/: lib.rs
src-tauri/plugins/dm/: Cargo.toml  README.md
src-tauri/plugins/dm/src/: lib.rs
src-tauri/plugins/kingbase/: Cargo.toml
src-tauri/plugins/kingbase/src/: lib.rs
src-tauri/plugins/mariadb/: Cargo.toml
src-tauri/plugins/mariadb/src/: lib.rs
src-tauri/plugins/mongodb/: Cargo.toml
src-tauri/plugins/mongodb/src/: lib.rs
src-tauri/plugins/mysql/: Cargo.toml  README.md
src-tauri/plugins/mysql/src/: handle.rs  lib.rs
src-tauri/plugins/oracle/: Cargo.toml
src-tauri/plugins/oracle/src/: lib.rs
src-tauri/plugins/postgresql/: Cargo.toml
src-tauri/plugins/postgresql/src/: lib.rs
src-tauri/plugins/redis/: Cargo.toml
src-tauri/plugins/redis/src/: lib.rs
src-tauri/plugins/sqlite/: Cargo.toml
src-tauri/plugins/sqlite/src/: handle.rs  lib.rs  system.rs
src-tauri/plugins/sqlserver/: Cargo.toml
src-tauri/plugins/sqlserver/src/: handle.rs  lib.rs
src-ui/database/: env.d.ts  package.json  tsconfig.json  vite.config.ts
src-ui/database/src/: App.vue  main.ts  types.ts
src-ui/database/src/assets/css/: _variable.scss  style.scss
src-ui/database/src/bridge/: index.ts
src-ui/database/src/components/: Administrator.vue  CreateLink.vue  Database.vue  Layout.vue  Link.vue  MainLayout.vue  MenuTree.vue  PalmCodeMirror.vue  PalmWelcome.vue  Result.bak.vue  Result.vue  ResultHistory.vue  SqlExecute.vue  SystemInfo.vue  Table.vue  User.vue
src-ui/database/src/store/: index.ts  links.ts  user.ts
src-ui/database/src/style/: styles.scss
src-ui/database/src/theme/: dark.json
src-ui/database/src/utils/: theme.ts
src-ui/index/: index.html  package.json  tsconfig.json  vite.config.ts
src-ui/index/src/: App.vue  main.ts
src-ui/index/src/style/: reset.scss
src-ui/kernel/: README.md  codding.html  env.d.ts  index.html  package.json  tsconfig.json  types.ts  vite.config.ts
src-ui/kernel/src/: App.vue  main.ts
src-ui/kernel/src/bridge/: index.ts
src-ui/kernel/src/components/: CodeEditor.vue  Extend.vue  FileTree.vue  Interactive.vue  Terminal.vue  WorkspaceEditor.vue
src-ui/kernel/src/core/: palm.ts
src-ui/kernel/src/layouts/: MicroView.vue
src-ui/kernel/src/store/: app.ts  file.ts  index.ts
src-ui/kernel/src/style/: _variable.scss  reset.scss  styles.scss
src-ui/kernel/src/temp/: auto-components.d.ts
src-ui/kernel/src/utils/: keyboard.ts
src-ui/kernel/temp/: auto-components.d.ts
src-ui/markdown/: .babelrc  .gitignore  README.md  markdown.html  package.json  types.ts  vite-env.d.ts  vite.config.ts
src-ui/markdown/src/: App.vue  main.ts
src-ui/markdown/src/components/: Editor.vue  FileTabs.vue  FileTree.vue  MainLayout.vue  Test.vue
src-ui/markdown/src/store/: file.ts
src-ui/markdown/src/style/: styles.scss
src-ui/markdown/src/theme/: light.json
src-ui/markdown/src/utils/: basic.ts  keyboard.bk2.ts
src-ui/markdown/temp/: auto-components.d.ts
