[workspace]
resolver="2"
members = ["app", "plugins/*", "common"]

[workspace.package]
version = "0.0.1"
authors = ["palm"] 
description = "A Tauri App" 
documentation = "https://xxx.com/palm"

[workspace.dependencies]
anyhow = "1.0.76"
thiserror = "1.0.51"
tauri = { version = "1.5.4" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.19.0"

# [build-dependencies]
# tauri-build = { version = "1.5", features = [] }
