[package]
name = "tauri-app"
version.workspace = true
description.workspace = true
authors.workspace = true
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "protocol-asset", "devtools", "path-all", "window-all", "shell-sidecar", "shell-execute", "dialog-all", "fs-all", "app-all", "shell-open"] }
cmd = { path = "../plugins/cmd"}
mysql = { path = "../plugins/mysql"}
sqlite = { path = "../plugins/sqlite"}
dm = { path = "../plugins/dm"}
kingbase = { path = "../plugins/kingbase"}
mariadb = { path = "../plugins/mariadb"}
mongodb = { path = "../plugins/mongodb"}
oracle = { path = "../plugins/oracle"}
postgresql = { path = "../plugins/postgresql"}
redis = { path = "../plugins/redis"}
sqlserver = { path = "../plugins/sqlserver"}

tokio =  {version = "1.35.1",  features = ["full"] }
tokio-postgres = "0.7.10"
reqwest = { version="0.11.22", features= ["json", "multipart"] }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

ssh2 = "0.9.4"
once_cell = "1.19.0"
tracing = "0.1.40"

# database
# mongoose = "0.1.16"
# oracle = "0.5.7"
# mysql = "24.0.0"
# rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
