[package]
name = "dm"
version.workspace = true 
authors.workspace = true
description.workspace = true
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]


[dependencies]
tauri = { workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
common = { path = "../../common"}