[package]
name = "kingbase"
version = "0.0.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]


[dependencies]
tauri = { workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
common = { path = "../../common"}