[package]
name = "mysql"
version = "0.0.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]

[dependencies]
tauri = { workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
once_cell = { workspace = true }
common = { path = "../../common"}
mysql = "24.0.0"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
