[package]
name = "sqlserver"
version = "0.0.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]


[dependencies]
tauri = { version = "1.5.4" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rusqlite = { version = "0.29.0", features = ["bundled"] }
fallible-iterator = "0.3.0"
common = { path = "../../common"}